AC_INIT([EIA-608 Tools], [0.1a], [], [608tools], [])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR(lib608/608.h)
AC_PROG_CC
AM_PROG_AR
AC_PROG_INSTALL
LT_INIT([disable-shared, static, win32-dll])
AC_C_BIGENDIAN
AC_C_CONST
AX_FUNC_GETOPT_LONG
AC_CONFIG_HEADERS([lib608/config.h])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
 lib608/Makefile
])
AC_OUTPUT