AC_INIT([EIA-608 Tools], [0.1a], [], [608tools], [])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR(lib608/608.h)
AC_CONFIG_MACRO_DIRS([m4])
AC_PROG_CC
AM_PROG_AR
AC_PROG_INSTALL
LT_INIT([disable-shared, static, win32-dll])
AC_C_BIGENDIAN([AC_DEFINE(WORDS_BIGENDIAN, 1)], [AC_DEFINE(WORDS_BIGENDIAN, 0)])
AC_C_CONST
AC_C_VOLATILE
AX_FUNC_GETOPT_LONG
AC_CONFIG_HEADERS([lib608/config.h])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
 lib608/Makefile
])
AC_OUTPUT